# proj

./: .gitignore  README.md  pyproject.toml  results.sqlite
demoapp/: tasks.py
demoapp/migrations/: 0001_initial.py
proj/: settings.py
