[tool.poetry]
name = "proj"
version = "0.1.0"
description = ""
authors = ["Nurbakyt Madibek <madibekov.nurbakhyt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
celery = "^5.0.5"
Django = "^3.2"
SQLAlchemy = "^1.4.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
